--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,11 @@
       {
         "source": "**",
         "destination": "/index.html"
+      }, {
+        "source":"/about",
+        "destination":"/about.html"
       }
-    ]
+    ],
+    "cleanUrls": true
   }
 }
